--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
         <input type="text" id="password-display" readonly>
         <button id="copy-btn">📋 Copy</button>
         <label>Password Length: <input type="number" id="length" min="6" max="30" value="12"></label>
-     
+        <div class="options">
+            <label><input type="checkbox" id="uppercase" checked> Uppercase</label>
+            <label><input type="checkbox" id="lowercase" checked> Lowercase</label>
+            <label><input type="checkbox" id="numbers" checked> Numbers</label>
+            <label><input type="checkbox" id="symbols"> Symbols</label>
+        </div>
+        <button id="generate-btn">⚡ Generate Password</button>
+        <p id="strength-indicator">Strength: </p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
